--- a/style.css
+++ b/style.css
@@ -6,10 +6,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-/* 헤 */
+/* 헤더 */
 body {
   background-color: #081b29;
-  color: #ededed;
 }
 header {
   position: fixed;
@@ -46,6 +45,7 @@ header {
 }
 /* 홈 */
 .home {
+  background: url("images//home.jpg") no-repeat center;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -166,3 +166,4 @@ header {
 .home-sci a:hover::before {
   width: 100%;
 }
+.ho;
