--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
 }
 /* 홈 */
 .home {
-  background: url("images//home.jpg") no-repeat center;
+  background: url("/images/home.jpg") no-repeat center;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -166,4 +166,19 @@ header {
 .home-sci a:hover::before {
   width: 100%;
 }
-.ho;
+.home-imgHover {
+  position: absolute;
+  top: 0;
+  right: 30px;
+  width: 40%;
+  height: 100%;
+  background-color: transparent;
+  /* border: 2px solid red; */
+  transition: 3s;
+}
+
+.home-imgHover:hover {
+  background-color: #081b29;
+  /* 투명도 0일때 완전투명 1일때 불투명 */
+  opacity: 0.7;
+}
