--- a/style.css
+++ b/style.css
@@ -71,19 +71,61 @@ header {
   max-width: 600px;
 }
 .home-content h1 {
+  position: relative;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.2;
+}
+.home-content h1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 110%;
+  background-color: #081b29;
+  /* 로고만 가려줌 */
+  animation: showRight 1s ease forwards;
+  /* 애니메이션 1.3초후에 시작 */
+  animation-delay: 1.3s;
 }
 .home-content h3 {
   font-size: 32px;
   font-weight: 700;
   color: #00abf0;
+  position: relative;
+}
+.home-content h3::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 110%;
+  background-color: #081b29;
+  /* 로고만 가려줌 */
+  animation: showRight 1s ease forwards;
+  /* 애니메이션 1.3초후에 시작 */
+  animation-delay: 1.3s;
 }
 
 .home-content p {
   font-size: 16px;
   margin: 20px 0 40px;
+  position: relative;
+}
+.home-content p::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 110%;
+  background-color: #081b29;
+  /* 로고만 가려줌 */
+  animation: showRight 1s ease forwards;
+  /* 애니메이션 1.6초후에 시작 */
+  animation-delay: 1.6s;
 }
 .home-content .btn-box {
   display: flex;
